--- a/package.json
+++ b/package.json
@@ -37,13 +37,15 @@
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
-    "next": "^14.0.0",
+    "next": "^14.2.5",
     "pg": "^8.11.3",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-country-flag": "^3.0.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
+    "react-player": "^2.16.0",
+    "swiper": "^11.1.9",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
   },
