--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "medusa-next",
   "version": "1.0.3",
   "private": true,
-  "author": "Kasper Fabricius Kristensen <kasper@medusajs.com> & Victor Gerbrands <victor@medusajs.com> (https://www.medusajs.com)",
-  "description": "Next.js Starter to be used with Medusa server",
+  "author": "Coseli",
+  "description": "Coseli Storefront",
   "keywords": [
     "medusa-storefront"
   ],
@@ -36,6 +36,7 @@
     "algoliasearch": "^4.20.0",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.454.0",
     "medusa-react": "^9.0.0",
     "next": "^14.2.5",
     "pg": "^8.11.3",
@@ -46,6 +47,7 @@
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "react-player": "^2.16.0",
+    "sharp": "^0.33.5",
     "swiper": "^11.1.9",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
